--- a/Administrador Proyectos/Views/Compañia/Delete.cshtml
+++ b/Administrador Proyectos/Views/Compañia/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Borrar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estas seguro de borrar esto?</h3>
 <div>
     <h4>Compañia</h4>
     <hr />
@@ -40,6 +40,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Volver a la lista.</a>
     </form>
 </div>
