--- a/Administrador Proyectos/Views/CompañiaUsuario/Delete.cshtml
+++ b/Administrador Proyectos/Views/CompañiaUsuario/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Administrador_Proyectos.Models.CompañiaUsuario
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Borrando";
 }
 
-<h2>Delete</h2>
+<h2>Borrando</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estas seguro de borrar esto?</h3>
 <div>
     <h4>CompañiaUsuario</h4>
     <hr />
@@ -15,16 +15,16 @@
             @Html.DisplayNameFor(model => model.Compañia)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Compañia.Direccion)
+            @Html.DisplayFor(model => model.Compañia.Nombre)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Usuario)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Usuario.Apellido)
+            @Html.DisplayFor(model => model.Usuario.Nombre)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.FechaAsignacion)
+            Fecha de asignación
         </dt>
         <dd>
             @Html.DisplayFor(model => model.FechaAsignacion)
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Borrar" class="btn btn-default" /> |
+        <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
