--- a/Administrador Proyectos/Views/CompañiaUsuario/Edit.cshtml
+++ b/Administrador Proyectos/Views/CompañiaUsuario/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Administrador_Proyectos.Models.CompañiaUsuario
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Asignación";
 }
 
-<h2>Edit</h2>
+<h2>Editar Asignación</h2>
 
 <h4>CompañiaUsuario</h4>
 <hr />
@@ -12,31 +12,23 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="CompañiaID" class="control-label"></label>
+                <label asp-for="CompañiaID" class="control-label">Compañia</label>
                 <select asp-for="CompañiaID" class="form-control" asp-items="ViewBag.CompañiaID"></select>
-                <span asp-validation-for="CompañiaID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UsuarioID" class="control-label"></label>
+                <label asp-for="UsuarioID" class="control-label">Usuario</label>
                 <select asp-for="UsuarioID" class="form-control" asp-items="ViewBag.UsuarioID"></select>
-                <span asp-validation-for="UsuarioID" class="text-danger"></span>
-            </div>
+            </div>            
             <div class="form-group">
-                <label asp-for="FechaAsignacion" class="control-label"></label>
-                <input asp-for="FechaAsignacion" class="form-control" />
-                <span asp-validation-for="FechaAsignacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Editar" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista.</a>
 </div>
 
 @section Scripts {
