--- a/Administrador Proyectos/Views/HistoriaUsuarios/Edit.cshtml
+++ b/Administrador Proyectos/Views/HistoriaUsuarios/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 <h4>HistoriaUsuario</h4>
 <hr />
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista.</a>
 </div>
 
 @section Scripts {
