--- a/Administrador Proyectos/Views/Tickets/Edit.cshtml
+++ b/Administrador Proyectos/Views/Tickets/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 <h4>Ticket</h4>
 <hr />
@@ -48,7 +48,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista.</a>
 </div>
 
 @section Scripts {
