--- a/Administrador Proyectos/Views/Usuarios/Create.cshtml
+++ b/Administrador Proyectos/Views/Usuarios/Create.cshtml
@@ -24,7 +24,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="TipoDocumento" class="control-label"></label>
-                <select asp-for="TipoDocumento" class="form-control"></select>
+                <select asp-for="TipoDocumento" class="form-control">
+                    <option value="Cedula">Cedula</option>
+                    <option value="TarjetaIdentidad">Tarjeta Identidad</option>
+                    <option value="Extranjeria">Extranjeria</option>
+                </select>
                 <span asp-validation-for="TipoDocumento" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -45,7 +49,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista.</a>
 </div>
 
 @section Scripts {
