--- a/Administrador Proyectos/Views/Usuarios/Edit.cshtml
+++ b/Administrador Proyectos/Views/Usuarios/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 <h4>Usuario</h4>
 <hr />
@@ -25,7 +25,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="TipoDocumento" class="control-label"></label>
-                <select asp-for="TipoDocumento" class="form-control"></select>
+                <select asp-for="TipoDocumento" class="form-control">
+                    <option value="Cedula">Cedula</option>
+                    <option value="TarjetaIdentidad">Tarjeta Identidad</option>
+                    <option value="Extranjeria">Extranjeria</option>
+                </select>
                 <span asp-validation-for="TipoDocumento" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -46,7 +50,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista.</a>
 </div>
 
 @section Scripts {
